# App-Comodity-Watch

./: .gitignore  @types_xlsx_1749274906.txt  ENHANCEMENT_SUMMARY.md  README.md  arsitektur_sistem_komoditas_watch.docx  arsitektur_sistem_komoditas_watch.md  backend_api_demo.md  component_review_summary.md  deploy_url.txt  ml_demo_results.md  technical_gap_analysis_komoditas_watch.docx  technical_gap_analysis_komoditas_watch.md  todo.md
code/: indonesian_commodity_api_integration.py  test_commodities_api.py  test_indonesian_apis.py
data/: api_test_summary.json  bmkg_api_info.json  bmkg_api_test_results.json  bmkg_github_api.json  bmkg_processor_github.json  bps_full_documentation.json  bps_postman_collection.json  bps_webapi_docs.json  commodity_prices_sample.json  data_go_id_test_results.json  datagovid_pertanian_info.json  kementan_api_info.json  panel_harga_api_info.json  panel_harga_test_results.json  pybmkg_docs.json  satu_data_portal.json  supported_commodities.json
docs/: laporan_api_komoditas_indonesia.md  research_plan_komoditas_indonesia.md  source_tracking_komoditas_research.md
komoditas-ml-service/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
komoditas-ml-service/app/: __init__.py
komoditas-ml-service/app/api/: main.py
komoditas-ml-service/app/config/: database.py  logging.py  redis.py  settings.py
komoditas-ml-service/app/features/: engineering.py
komoditas-ml-service/app/inference/: predictor.py
komoditas-ml-service/app/models/: anomaly_detection.py  lstm_model.py  prophet_model.py  schemas.py
komoditas-ml-service/app/preprocessing/: data_processor.py
komoditas-ml-service/app/training/: trainer.py
komoditas-ml-service/docker/postgres/: init.sql
komoditas-ml-service/docker/redis/: redis.conf
komoditas-ml-service/scripts/: dev-setup.sh
komoditas-ml-service/tests/: conftest.py
komoditas-ml-service/tests/unit/: test_feature_engineering.py
komoditas-watch-backend/: Dockerfile  README.md  docker-compose.yml  jest.config.js  package.json  tsconfig.json
komoditas-watch-backend/prisma/: schema.prisma  (+1 more)
komoditas-watch-dashboard/: generate_time_scale_data.cjs  package.json  tailwind.config.js  update_commodities_data.cjs
sub_tasks/: task_summary_arsitektur_sistem_komoditas_watch.md  task_summary_comprehensive_komoditas_dashboard_enhancement.md  task_summary_enhanced_komoditas_dashboard_major_upgrade.md  task_summary_enhanced_komoditas_dashboard_visual_analytics.md  task_summary_final_fixes_report_generation_perfect_data_consistency.md  task_summary_komoditas_api_research_indonesia.md  task_summary_komoditas_ml_service_development.md  task_summary_komoditas_watch_backend_foundation.md  task_summary_komoditas_watch_dashboard_prototype.md  (+3 more)
(+80 files in other folders)
